# ProjetDATAMaster

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
.github/workflows/: CI.yml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: exploration.ipynb  test.ipynb
src/: DockerFile  __init__.py
src/dags/: data_pipeline.py  data_pipeline_CSV.py  data_pipeline_api.py  data_pipeline_api_test.py
src/data_process/: fetch_api_data.py  load_save_data_to_sql.py  spark_session.py  transform_and_insert.py
src/tests/: test_functions.py
src/vizualisation/: old_viz.py  viz_app.py
