[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ProjetDATAMastere"
version = "0.0.1"
description = "This is my end of year projet of the Mastere Data Engineer in Ynov Aix Campus"
authors = [
  { name = "Wissem GHOUILI" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.16"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["ProjetDATAMastere"]
force_sort_within_sections = true


